Inlocuieste collect(Collectors.toList()) cu toList() in ComandaService
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>